--- a/pages/5221.html
+++ b/pages/5221.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -950,17 +950,17 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#History'>History</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#References'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <em>integral transform</em> on <a class='existingWikiWord' href='/nlab/show/function'>functions</a> is a <a class='existingWikiWord' href='/nlab/show/linear+map'>linear map</a> between functions on <a class='existingWikiWord' href='/nlab/show/space'>space</a>s <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> encoded by a function <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> on the <a class='existingWikiWord' href='/nlab/show/cartesian+product'>product</a> space <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>×</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>X \times Y</annotation></semantics></math> and given by a formula of the type</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>function</mi><mspace width='thickmathspace'></mspace><mi>f</mi><mspace width='thickmathspace'></mspace><mi>on</mi><mspace width='thickmathspace'></mspace><mi>X</mi><mo stretchy='false'>)</mo><mo>↦</mo><mrow><mo>(</mo><mi>y</mi><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mi>K</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<p>An <em>integral transform</em> on <a class='existingWikiWord' href='/nlab/show/function'>functions</a> is a <a class='existingWikiWord' href='/nlab/show/linear+map'>linear map</a> between functions on <a class='existingWikiWord' href='/nlab/show/space'>spaces</a> <math class='maruku-mathml' display='inline' id='mathml_bc089d721c102584d594f3d6e590104416370bd0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_bc089d721c102584d594f3d6e590104416370bd0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> encoded by a function <math class='maruku-mathml' display='inline' id='mathml_bc089d721c102584d594f3d6e590104416370bd0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> (or <a class='existingWikiWord' href='/nlab/show/generalized+function'>generalized function</a>, e.g. <a class='existingWikiWord' href='/nlab/show/Schwartz+kernel'>distribution of two variables</a>) on the <a class='existingWikiWord' href='/nlab/show/cartesian+product'>product</a> space <math class='maruku-mathml' display='inline' id='mathml_bc089d721c102584d594f3d6e590104416370bd0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>×</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>X \times Y</annotation></semantics></math> and given by a formula of the type</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_bc089d721c102584d594f3d6e590104416370bd0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>function</mi><mspace width='thickmathspace'></mspace><mi>f</mi><mspace width='thickmathspace'></mspace><mi>on</mi><mspace width='thickmathspace'></mspace><mi>X</mi><mo stretchy='false'>)</mo><mo>↦</mo><mrow><mo>(</mo><mi>y</mi><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mi>K</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   (function\;f\;on\;X) \mapsto
   \left(y \mapsto
   \int_{X} f(x) K(x,y) \right)
   \,,
 
 </annotation></semantics></math></div>
-<p>where on the right we have some kind of <a class='existingWikiWord' href='/nlab/show/integral'>integration</a> over <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
+<p>where on the right we have some kind of <a class='existingWikiWord' href='/nlab/show/integral'>integration</a> over <math class='maruku-mathml' display='inline' id='mathml_bc089d721c102584d594f3d6e590104416370bd0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
 
-<p>Here <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> is called the integral <strong>kernel</strong> of the transformation.</p>
+<p>Here <math class='maruku-mathml' display='inline' id='mathml_bc089d721c102584d594f3d6e590104416370bd0_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> is called the integral <strong>kernel</strong> of the transformation.</p>
 
 <p>Typically the definition of an integral transform on functions involves some delicate technical issues concerning the precise nature of the function space, the <a class='existingWikiWord' href='/nlab/show/measure+space'>measure</a> with respect to which the integral is defined, etc.</p>
 
@@ -969,6 +969,10 @@ margin-left: 0em;
 <p>Special cases of such <a class='existingWikiWord' href='/nlab/show/vertical+categorification'>categorified</a> integral transforms are discussed at</p>
 
 <ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schwartz+kernel'>Schwartz kernel</a> (<a class='existingWikiWord' href='/nlab/show/Schwartz+kernel'>distribution of two variables</a>)</p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Fourier-Mukai+transform'>Fourier-Mukai transform</a>, <a class='existingWikiWord' href='/nlab/show/topological+T-duality'>topological T-duality</a></p>
 </li>
@@ -986,7 +990,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>The simplest example is <a class='existingWikiWord' href='/nlab/show/matrix+calculus'>matrix multiplication</a>, which corresponds to the case where <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/discrete+object'>discrete space</a>s.</p>
+<p>The simplest example is <a class='existingWikiWord' href='/nlab/show/matrix+calculus'>matrix multiplication</a>, which corresponds to the case where <math class='maruku-mathml' display='inline' id='mathml_bc089d721c102584d594f3d6e590104416370bd0_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_bc089d721c102584d594f3d6e590104416370bd0_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/discrete+object'>discrete space</a>s.</p>
 </li>
 
 <li>
@@ -1065,14 +1069,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 12, 2017 15:18:37 
+  Revised on January 15, 2018 16:24:38 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.55.151)
+  (85.195.101.211)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/integral+transform" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/integral+transform/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/integral+transform" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/integral+transform" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/integral+transform" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/integral+transform/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/integral+transform" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/integral+transform" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
