--- a/pages/18923.html
+++ b/pages/18923.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,97 +308,20 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#construction'>Construction</a><ul><li><a href='#surreal_space_as_a_projective_space'>Surreal space as a projective space</a></li><li><a href='#topology_on_surreal_spaces'>Topology on surreal spaces</a></li></ul></li><li><a href='#genetic_spaces_schemes_and_surreal_curves'>Genetic spaces, schemes, and surreal curves</a><ul><li><a href='#infinitely_blown_up_space'>Infinitely blown up space</a></li><li><a href='#vector_bundles_as_elements_of_surreal_space'>Vector Bundles as elements of surreal space</a></li><li><a href='#motivic_meaning'>Motivic meaning</a></li><li><a href='#genetic_transformations'>Genetic transformations</a></li><li><a href='#polynomial_inequalities'>Polynomial inequalities</a></li></ul></li><li><a href='#motivic_surreal_spaces'>Motivic surreal spaces</a></li><li><a href='#quasicategorical_framework'>Quasi-categorical framework</a></li><li><a href='#translations_and_transformations_on_surreal_spaces'>Translations and transformations on surreal spaces</a></li><li><a href='#asymptotic_parts_of_real_numbers_asymptotic_numbers'>Asymptotic Parts of Real Numbers (Asymptotic Numbers)</a></li><li><a href='#ordinal_simplicial_and_surreal_genealogical_cohomology'>Ordinal, Simplicial, and Surreal (Genealogical cohomology)</a></li><li><a href='#universal_algebraic_definition'>Universal algebraic definition</a></li><li><a href='#supercomplex_spaces'>Supercomplex Spaces</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
+    <p>The previous content of this page was deemed inappropriate; please don’t continue editing it. If you insist on discussing your ideas here, you can start out on the <a href='https://nforum.ncatlab.org'>nForum</a>, where regulars can give feedback and guidance. But we suggest that you try to take this discussion to another, more suitable forum.</p>
 
-<p>A surreal space is essentially the space of <a class='existingWikiWord' href='/nlab/show/surreal+number'>surreal numbers</a>; it can be seen as a <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> over any given surreal number <a class='existingWikiWord' href='/nlab/show/field'>field</a>. The arithmetic properties of the surreals of course follow suit in this space such that the scalars of this vector space are under the field operations of surreal numbers. We denote the surreal space as <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mstyle mathvariant='bold'><mi>S</mi></mstyle> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbf{S}^n</annotation></semantics></math>. Any given real vector space <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>m</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^m</annotation></semantics></math> is by default a <a class='existingWikiWord' href='/nlab/show/subspace'>subspace</a>. In a sense, <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mstyle mathvariant='bold'><mi>S</mi></mstyle> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbf{S}^n</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/module'>module</a> over a field of <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a>.</p>
-
-<h2 id='construction'>Construction</h2>
-
-<p>Given <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mstyle mathvariant='bold'><mi>S</mi></mstyle> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbf{S}^n</annotation></semantics></math> <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊃</mo></mrow><annotation encoding='application/x-tex'>\supset</annotation></semantics></math> <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>m</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^m</annotation></semantics></math> there exists the category of modules in the former that distribute over the latter. We write <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SMod</mi></mrow><annotation encoding='application/x-tex'>{SMod}</annotation></semantics></math> for it.</p>
-
-<div class='num_definition'>
-<h6 id='definition'>Definition</h6>
-
-<p><math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SMod</mi></mrow><annotation encoding='application/x-tex'>{SMod}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/module+over+an+enriched+category'>module over an enriched category</a>.</p>
-
-<p>From the definition of vector spaces we have</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Vect</mi> <mi>S</mi></msub><mo>≔</mo><mi>SMod</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  Vect_S \coloneqq SMod
-  \,.
-</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SMod</mi><mo>⊃</mo><mi>ℝ</mi><mi>Mod</mi></mrow><annotation encoding='application/x-tex'>SMod \supset \mathbb{R}Mod</annotation></semantics></math></div>
-<p>The surreal numbers naturally are an enriched category over the reals given that the elements of the category <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sur</mi></mrow><annotation encoding='application/x-tex'>{Sur}</annotation></semantics></math> are elements of <a class='existingWikiWord' href='/nlab/show/hom-functor'>Hom</a> contained within <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Real</mi></mrow><annotation encoding='application/x-tex'>{Real}</annotation></semantics></math>.</p>
-</div>
-
-<p>The category of real modules is a subcategory of the category of surreal modules.</p>
-
-<h3 id='surreal_space_as_a_projective_space'>Surreal space as a projective space</h3>
-
-<p>Every <a class='existingWikiWord' href='/nlab/show/ordered+field'>ordered field</a> can be hypothetically embedded within the surreals. Now given this, we can say that for a drawn line of surreal numbers we have that it is in a sense a <a class='existingWikiWord' href='/nlab/show/projective+line'>projective line</a>. More specifically, if say you have the field of real numbers <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math> microscopically embedded within <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mstyle mathvariant='bold'><mi>S</mi></mstyle> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbf{S}^n</annotation></semantics></math> and given a disjoint union of <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty)</annotation></semantics></math>, the latter of which is contained within the surreals as they contain the infinite numbers, we have a one-point compactification for any given union for a subfield of reals and a collection of infinite numbers. This makes every surreal line a special kind of projective line. This connection leads us to seeing that the asymptotic collection of real-valued functions is contained within <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>obj</mi><mo stretchy='false'>(</mo><mi>Sur</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>obj({Sur})</annotation></semantics></math>.</p>
-
-<p>This practice can also have any surreal space in general act as a projective space of reals. However, we must keep in mind that there is much more to it than just that. We also now have a way to describe the asymptotic behavior of real-valued functions through this. And on top of that, these projective spaces of real numbers are merely special subsets, not the whole deal itself.</p>
-
-<p>Surreal space (denoted as <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_18' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mstyle mathvariant='bold'><mi>S</mi></mstyle> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbf{S}^n</annotation></semantics></math>) can be seen as a <a class='existingWikiWord' href='/nlab/show/topologically+enriched+category'>topologically enriched category</a> of a real space <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_19' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>m</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^m</annotation></semantics></math>. We write <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_20' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sur</mi></mrow><annotation encoding='application/x-tex'>{Sur}</annotation></semantics></math> to denote it. Its objects are all the infinitely near points of <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_21' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>m</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^m</annotation></semantics></math>, and all vector spaces over ordered fields. In fact, <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_22' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sur</mi></mrow><annotation encoding='application/x-tex'>{Sur}</annotation></semantics></math> is a vector space over the reals. It is an equivalence relation acting on the reals and forms enriched modules over them. Given the concept of a topological space blended with this notion we thus have a ringed space. Kruskal demonstrated that the surreals describe the asymptotic behavior of the reals. From this we can see this as part of the objects in <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_23' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sur</mi></mrow><annotation encoding='application/x-tex'>{Sur}</annotation></semantics></math>.</p>
-
-<h3 id='topology_on_surreal_spaces'>Topology on surreal spaces</h3>
-
-<h2 id='genetic_spaces_schemes_and_surreal_curves'>Genetic spaces, schemes, and surreal curves</h2>
-
-<p>Starting from page 5 of [Salzedo], Definition 6, the discussion of the topology of surreal numbers begin. We can take this conception and graduate it towards surreal spaces. One notable thing is the genetic construction of polynomials on page 7. This would mean each and every surreal polynomial is a real algebraic scheme. Or more precisely in motivic terms a surreal space is a category of correspondences of real algebraic cycles.</p>
-
-<p>It is from here we can define polynomials over surreal spaces. Zeroes of polynomials over these surreal polynomials is analogous to projective schemes in a real space. A genetic space is a space in which <a class='existingWikiWord' href='/nlab/show/ringed+space'>ringed spaces</a> can be related with genetic formulas. The surreal curve is defined as a surreal space of dimension one. Genetic spaces are essentially real algebraic cycles of schemes.</p>
-
-<p>Adjoin any given ring to a surreal space and you thus have a ringed space. For any given polynomial, each may be constructed through the use of genetic formulas. Equipped with a locally real asymptotic real sheaf structure we can thus define the category of real algebraic correspondences.</p>
-
-<h3 id='infinitely_blown_up_space'>Infinitely blown up space</h3>
-
-<h3 id='vector_bundles_as_elements_of_surreal_space'>Vector Bundles as elements of surreal space</h3>
-
-<p>The union of all projectivized vector bundles in a real space is a point in surreal space.</p>
-
-<h3 id='motivic_meaning'>Motivic meaning</h3>
-
-<h3 id='genetic_transformations'>Genetic transformations</h3>
-
-<h3 id='polynomial_inequalities'>Polynomial inequalities</h3>
-
-<h2 id='motivic_surreal_spaces'>Motivic surreal spaces</h2>
-
-<p>The <a class='existingWikiWord' href='/nlab/show/sheaf+cohomology'>sheaf cohomology</a> on a surreal space is equivalent to a <a class='existingWikiWord' href='/nlab/show/motivic+cohomology'>motivic cohomology</a> of real algebraic cycles. <math class='maruku-mathml' display='inline' id='mathml_314f1f93855ba7f19c1b5dbcfe6415a3be4dea70_24' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sur</mi></mrow><annotation encoding='application/x-tex'>{Sur}</annotation></semantics></math> contains real motives.</p>
-
-<h2 id='quasicategorical_framework'>Quasi-categorical framework</h2>
-
-<p>Certain tools can be used to show the quasi-categorical format of surreal spaces. A surreal space is a topos over the reals.</p>
-
-<h2 id='translations_and_transformations_on_surreal_spaces'>Translations and transformations on surreal spaces</h2>
-
-<h2 id='asymptotic_parts_of_real_numbers_asymptotic_numbers'>Asymptotic Parts of Real Numbers (Asymptotic Numbers)</h2>
-
-<p>We use sheaves to discuss this.</p>
-
-<h2 id='ordinal_simplicial_and_surreal_genealogical_cohomology'>Ordinal, Simplicial, and Surreal (Genealogical cohomology)</h2>
-
-<h2 id='universal_algebraic_definition'>Universal algebraic definition</h2>
-
-<h2 id='supercomplex_spaces'>Supercomplex Spaces</h2>
-
-<h2 id='references'>References</h2>
-
-<ul>
-<li>[AS] Simon Rubinstein-Salzedo and Ashvin A. Swaminathan, <em>Analysis on Surreal Numbers</em>, Journal of Logic and Analysis, <a href='https://arxiv.org/abs/1307.7392'>arXiv</a></li>
-</ul>
+<p>– The <a class='existingWikiWord' href='/nlabmeta/show/steering+committee' title='nlabmeta'>Steering Committee</a></p>
 </div>
 
 <div class="revisedby">
-  Revised on January 13, 2018 15:01:25 
-  by <a class="existingWikiWord" href="/nlab/show/Hammad+Rana">Hammad Rana</a>
-  (2600:1005:b044:b753:3557:528f:bff8:1a6)
+  Revised on January 15, 2018 18:53:55 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (4.16.104.172)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Surreal+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Surreal+space/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/Surreal+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Surreal+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Surreal+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Surreal+space/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/Surreal+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Surreal+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
