--- a/pages/18925.html
+++ b/pages/18925.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,30 +308,20 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#overview'>Overview</a></li><li><a href='#related_pages'>Related pages</a></li></ul></div>
-<h2 id='overview'>Overview</h2>
+    <p>The previous content of this page was deemed inappropriate; please don’t continue editing it. If you insist on discussing your ideas here, you can start out on the <a href='https://nforum.ncatlab.org'>nForum</a>, where regulars can give feedback and guidance. But we suggest that you try to take this discussion to another, more suitable forum.</p>
 
-<p>Surreal geometry is in simplest terms the study of three central ideas: the study of <a class='existingWikiWord' href='/nlab/show/algebraic+geometry'>algebraic geometry</a> over (the space of) <a class='existingWikiWord' href='/nlab/show/surreal+number'>surreal numbers</a>, generalizations for notions of geometry as well as properties one can derive from them, and last but not least the philosophical scope and meaning of geometry. In an essence, surreal geometry studies geometry itself and the blending of the three aforementioned areas of studies. The prime foundation of surreal geometry is the study of the topology and geometry of surreal numbers.</p>
-
-<h2 id='related_pages'>Related pages</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Surreal+space'>Surreal space</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/Hammad+Rana'>Hammad Rana</a></li>
-</ul>
+<p>– The <a class='existingWikiWord' href='/nlabmeta/show/steering+committee' title='nlabmeta'>Steering Committee</a></p>
 </div>
 
 <div class="revisedby">
-  Created on January  8, 2018 22:15:53 
-  by <a class="existingWikiWord" href="/nlab/show/Hammad+Rana">Hammad Rana</a>
-  (2600:1005:b024:7164:18f1:215c:9a4d:e10d)
+  Revised on January 15, 2018 18:54:15 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (4.16.104.172)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Surreal+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Surreal+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Surreal+geometry/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Surreal+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Surreal+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
