--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,18 +308,61 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>…</p>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8f124d8831ec2d0960d80f2d612f4dbddcde6371_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd></mtd> <mtd><msub><mi>T</mi> <mi>v</mi></msub><mo stretchy='false'>(</mo><msub><mi>V</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>V</mi> <mi>v</mi></msub><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo stretchy='false'>(</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>⋅</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo>∘</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo><mrow><mi>Γ</mi><mo>∈</mo><msub><mi>𝒢</mi> <mrow><mo stretchy='false'>(</mo><msub><mi>V</mi> <mi>j</mi></msub><msubsup><mo stretchy='false'>)</mo> <mrow><mi>j</mi><mo>=</mo><mn>1</mn></mrow> <mi>v</mi></msubsup></mrow></msub></mrow></munder><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo><mrow><mi>r</mi><mo>&lt;</mo><mi>s</mi><mo>∈</mo><mo stretchy='false'>{</mo><mn>1</mn><mo>,</mo><mi>⋯</mi><mo>,</mo><mi>v</mi><mo stretchy='false'>}</mo></mrow></munder><mstyle displaystyle='false'><mfrac><mn>1</mn><mrow><msub><mi>e</mi> <mrow><mi>r</mi><mo>,</mo><mi>s</mi></mrow></msub><mo>!</mo></mrow></mfrac></mstyle><munder><mo>∫</mo><mrow><mi>Σ</mi><mo>×</mo><mi>Σ</mi></mrow></munder><msubsup><mi>Δ</mi> <mi>H</mi> <mrow><mi>a</mi><mi>b</mi></mrow></msubsup><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mphantom><mo>=</mo></mphantom><mspace width='thickmathspace'></mspace><mrow><mo>(</mo><msub><mi>V</mi> <mn>1</mn></msub><mo>⊗</mo><mi>⋯</mi><mo>⊗</mo><msub><mi>V</mi> <mrow><mi>r</mi><mo>−</mo><mn>1</mn></mrow></msub><mo>⊗</mo><mfrac><mrow><msup><mi>δ</mi> <mrow><msub><mi>e</mi> <mrow><mi>r</mi><mo>,</mo><mi>s</mi></mrow></msub></mrow></msup><msub><mi>V</mi> <mi>r</mi></msub></mrow><mrow><mi>δ</mi><msup><mrow><mo>(</mo><msup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow> <mrow><msub><mi>e</mi> <mrow><mi>r</mi><mo>,</mo><mi>s</mi></mrow></msub></mrow></msup></mrow></mfrac><mo>⊗</mo><msub><mi>V</mi> <mrow><mi>r</mi><mo>+</mo><mn>1</mn></mrow></msub><mo>⊗</mo><mi>⋯</mi><mo>⊗</mo><msub><mi>V</mi> <mrow><mi>s</mi><mo>−</mo><mn>1</mn></mrow></msub><mo>⊗</mo><mfrac><mrow><msup><mi>δ</mi> <mrow><msub><mi>e</mi> <mrow><mi>r</mi><mo>,</mo><mi>s</mi></mrow></msub></mrow></msup><msub><mi>V</mi> <mi>s</mi></msub></mrow><mrow><mi>δ</mi><msup><mrow><mo>(</mo><msup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>b</mi></msup><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow> <mrow><msub><mi>e</mi> <mrow><mi>r</mi><mo>,</mo><mi>s</mi></mrow></msub></mrow></msup></mrow></mfrac><mo>⊗</mo><msub><mi>V</mi> <mrow><mi>s</mi><mo>+</mo><mn>1</mn></mrow></msub><mo>⊗</mo><mi>⋯</mi><mo>⊗</mo><msub><mi>V</mi> <mi>v</mi></msub><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mphantom><mo>=</mo></mphantom><msub><mi>dvol</mi> <mi>Σ</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><msub><mi>dvol</mi> <mi>Σ</mi></msub><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mtd></mtr></mtable></mrow><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+    &amp; T_v(V_1, \cdots ,V_v)
+    \\
+    &amp; =
+    ((-)\cdot(-))
+    \circ
+    \underset{\Gamma \in \mathcal{G}_{(V_j)_{j = 1}^{v}}}{\sum}
+    \underset{ r \lt s \in \{1, \cdots, v\} }{\prod}
+    \tfrac{1}{e_{r,s}!}
+    \underset{\Sigma \times \Sigma}{\int}
+      \Delta_H^{a b}(x,y)
+    \\
+    &amp; 
+    \phantom{=}\;
+    \left(
+      V_1 
+        \otimes 
+        \cdots
+        \otimes 
+      V_{r-1} 
+        \otimes
+      \frac{\delta^{e_{r,s}} V_r }{\delta \left(\mathbf{\Phi}^a(x)\right)^{e_{r,s}}}
+        \otimes
+      V_{r+1}
+        \otimes
+        \cdots
+        \otimes
+      V_{s-1}
+        \otimes
+      \frac{\delta^{e_{r,s}} V_s }{ \delta \left(\mathbf{\Phi}^b(y)\right)^{e_{r,s}} }    
+        \otimes
+      V_{s+1}
+        \otimes
+        \cdots
+        \otimes
+      V_v
+    \right)
+    \\
+    &amp; \phantom{=} dvol_\Sigma(x)\, dvol_\Sigma(y)
+  \end{aligned}
+  \,,
+
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on January 15, 2018 17:09:36 
+  Revised on January 16, 2018 08:21:16 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (85.195.101.211)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1389" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1389 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1390" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1390 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
